# babylonify

./: AGENTS.md  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: build-and-release.yml
src/: cli.rs  detect.rs  lib.rs  main.rs  process.rs  text.rs
tests/: cli.rs
