[package]
name = "babylonify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
lingua = "1.7.2"
once_cell = "1.21.3"
polars = { version = "0.52.0", features = ["lazy", "parquet"] }
rayon = "1.11.0"
regex = "1.12.2"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
